# BioMoQA-Classifier

./: .env.example  .gitignore  MIGRATION_SUMMARY.md  README.md  __init__.py  analyze_ranking_performance.py  analyze_train_predictions.sh  biomoqa_presentation.tex  clean.sh  compare_negatives_enhanced.py  create_aggregated_confusion_matrix.py  extract_fp_fn_enhanced.py  extract_fp_fn_single_model.py  extract_screening_labels_v2.py  nohup.out  old_metrics.csv  pyproject.toml  pyproject_minimal.toml  requirements-web.txt  score_openalex_direct.py  test_neg_pmids.txt  test_pos_pmids.txt  train_neg_pmids.txt  train_pos_pmids.txt  val_neg_pmids.txt  val_pos_pmids.txt  verify_folds.py
Report/: Rapport_Stage.aux  Rapport_Stage.bbl  Rapport_Stage.bbl-SAVE-ERROR  Rapport_Stage.bcf  Rapport_Stage.bcf-SAVE-ERROR  Rapport_Stage.blg  Rapport_Stage.fdb_latexmk  Rapport_Stage.fls  Rapport_Stage.out  Rapport_Stage.run.xml  Rapport_Stage.tex  Rapport_Stage.toc  references.bib
configs/: best_hpo.yaml  ensemble.yaml  paths.yaml
examples/: fill_metadata_example.py  sample_texts.csv  sample_texts.json
experiments/: biomoqa.py  inference.py
model/: HPO_callbacks.py  binary_pipeline.py  fine_tune.py  from_checkpoint.py  ipbes_training_pipeline.py  model_init.py  multi_label_pipeline.py  optimization.py  optimization_cross_val.py  utils.py
notebooks/: biomoqa_eda.ipynb  biomoqa_results.ipynb  biomoqa_thesis_plots.ipynb  eda.ipynb  results.ipynb  statistical_analysis.ipynb
results/: false_negatives_roberta-base_BCE_with_title.csv  false_positives_best_model.csv  kappa_scores.csv  (+5 more)
(+539 files in other folders)
